force-app/main/default/objects/blng__DebitNoteAllocation__c/blng__DebitNoteAllocation__c.object-meta.xml
<CustomObject>
    <label>Debit Note Allocation (Invoice Line)</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debit Note Allocations (Invoice Line)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>