force-app/main/default/objects/blng__DebitNoteAllocation__c/fields/blng__BillingTreatment__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Treatment</label>
    <referenceTo>blng__BillingTreatment__c</referenceTo>
    <relationshipLabel>Debit Note Allocations</relationshipLabel>
    <relationshipName>BillingTreatmentDebitNoteAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>