force-app/main/default/objects/blng__DebitNoteAllocation__c/fields/blng__DebitNoteLine__c.field-meta.xml
<CustomField>
    <fullName>blng__DebitNoteLine__c</fullName>
    <label>Debit Note Line</label>
    <referenceTo>blng__DebitNoteLine__c</referenceTo>
    <relationshipLabel>Debit Note Allocations</relationshipLabel>
    <relationshipName>DebitNoteAllocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>