force-app/main/default/objects/blng__DebitNoteAllocation__c/fields/blng__InvoiceLine__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceLine__c</fullName>
    <label>Invoice Line</label>
    <referenceTo>blng__InvoiceLine__c</referenceTo>
    <relationshipLabel>Debit Note Allocations</relationshipLabel>
    <relationshipName>DebitNoteAllocations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>