force-app/main/default/objects/blng__DebitNoteAllocation__c/fields/blng__Payments__c.field-meta.xml
<CustomField>
    <fullName>blng__Payments__c</fullName>
    <label>Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>