force-app/main/default/objects/blng__DebitNoteAllocation__c/fields/blng__TaxRule__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Rule</label>
    <referenceTo>blng__TaxRule__c</referenceTo>
    <relationshipLabel>Debit Note Allocations</relationshipLabel>
    <relationshipName>TaxRuleDebitNoteAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>